--- a/src/components/Navigation/Toolbar/Toolbar.module.css
+++ b/src/components/Navigation/Toolbar/Toolbar.module.css
@@ -1,7 +1,7 @@
 .Toolbar {
-height:56px;
-width:100%;
-position:fixed;
+height: 56px;
+width: 100%;
+position: fixed;
 top:0;
 left:0;
 background-color: #703B09;
@@ -16,4 +16,17 @@ z-index: 90;
 
 .Toolbar nav {
   height: 100%;
+}
+
+.Logo {
+
+  height: 80%;
+}
+
+
+@media (max-width: 499px) {
+
+  .DesktopOnly {
+    display: none;
+  }
 }
